# test_task_django_cleancar

./: .dockerignore  .env  .flake8  .gitignore  README.md  pyproject.toml
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile  docker-compose.yml
docs/: commands.md  installation.md  structure.md  testing.md  usage.md
trading/: admin.py  consumers.py  models.py  routing.py  tasks.py  tests.py  urls.py
trading/api/: serializers.py  urls.py  views.py
trading/management/commands/: clean_trades.py
