[project]
name = "test-task-django-cleancar"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry",email = "kiselevdv1991@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "channels (>=4.2.0,<5.0.0)",
    "channels-redis (>=4.2.1,<5.0.0)",
    "django-redis (>=5.4.0,<6.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "django-celery-beat (>=2.7.0,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "whitenoise (>=6.9.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.10.0"
flake8 = "^7.1.2"
isort = "^6.0.1"